# hook-inject

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci-self-hosted.yml  ci.yml
fixtures/agent/: Cargo.toml
fixtures/agent/src/: lib.rs
hook-inject-build/: Cargo.toml  README.md
hook-inject-build/src/: devkit.rs  lib.rs
hook-inject-build/tests/: metadata.rs
native/: frida_shim.c  frida_shim.h  frida_shim_stub.c
scripts/: build_frida_core_devkit.sh
src/: error.rs  lib.rs  library.rs  main.rs  process.rs  program.rs
src/backend/: frida.rs  mod.rs
tests/: blob.rs  inject_smoke.rs  library_data.rs  library_ref.rs  process.rs  spawn_smoke.rs  stub_runtime.rs
