[package]
name = "hook-inject"
version = "0.1.0"
edition = "2024"
description = "Cross-platform process injection via Frida Core."
documentation = "https://docs.rs/hook-inject"
homepage = "https://github.com/veecore/hook-inject"
repository = "https://github.com/veecore/hook-inject"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Victor <victorayo206@gmail.com>"]
keywords = ["injection", "process", "frida", "instrumentation"]
categories = ["os::windows-apis", "os::unix-apis", "development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[workspace]
members = ["fixtures/agent", "fixtures/target", "hook-inject-build"]

[dependencies]
hook-inject-build = { version = "0.1.0", path = "hook-inject-build", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[build-dependencies]
cc = "1.0"
hook-inject-build = { version = "0.1.0", path = "hook-inject-build", features = ["download-devkit"] }
